Map, kidney visualizations all added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,68 @@ html {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
+
+.chart-title {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+#chart .chart-title {
+  margin-bottom: 10px; /* Adjust the margin to move the title further down */
+}
+
+.chart-paragraph {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.chart-paragraph h3 {
+  font-size: 24px; /* Increase the font size for more emphasis */
+  font-weight: bold;
+  color: #333; /* Choose an appropriate color */
+  margin-bottom: 10px; /* Decrease the margin-bottom for tighter spacing */
+  text-transform: uppercase; /* Add text transformation for visual impact */
+  letter-spacing: 1px; /* Add letter-spacing for improved readability */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Add a subtle text shadow for depth */
+}
+
+.chart-title p {
+  font-size: 18px; /* Adjust the font size to match others */
+}
+
+.top-paragraph {
+  text-align: center;
+  padding: 20px;
+  background-color: #f2f2f2;
+}
+
+.dashboard-description {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  color: #006633;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+#chart3 canvas {
+  width: 100%; /* Adjust the width to match the desired size */
+  height: 300px; /* Adjust the height to match the desired size */
+}
+
+.tooltip {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 12px;
+  pointer-events: none; /* Prevent the tooltip from blocking interactions with other elements */
+  opacity: 0; /* Hide the tooltip by default */
+  transition: opacity 0.2s ease-in-out;
+}
